--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
-    "next": "^14.0.0",
+    "next": "^14.0.1",
+    "next-auth": "^5.0.0-beta.3",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^9.0.4",
@@ -26,11 +27,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.14",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.0.1",
     "prettier": "^3.0.3"
   },
   "engines": {
